--- a/css/main.css
+++ b/css/main.css
@@ -354,25 +354,13 @@ Her finner man styling for elementer spesifikt for denne siden */
   opacity: 0.9;
 }
 
+/*Bildene som ligger i teksten styles her. Vi har valgt å style disse likt*/
 .image-study img {
   /* Asymmetrisk kant på bildene */
   border-radius: 50% 20% / 10% 40%;
   opacity: 0.9;
 }
 
-/* For annen skjermstørrelse */
-@media (min-width: 700px){
-  .image-index {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .image-study img {
-    left:auto; 
-    right: 3%;
-  }
-}
-
-/* Sørger for at bildene scaler når man er i mindre skjermmodus*/
 @media (max-width: 1345px) {
   .image-index {
     position: fixed;
